--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <div class="wrapper">
 
       <section>
+        <div class="github-widget" data-username="KorChris"></div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="https://npmcdn.com/github-card@1.0.0/dist/widget.js"></script>
         <div id="title">
           <h1>Korchris.GitHub.io</h1>
           <p></p>
@@ -36,6 +39,7 @@
         </div>
 
         <h3>
+
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
@@ -63,6 +67,6 @@
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+
   </body>
 </html>
